# lab3

./: README.md
config/: wall_follower_params.yaml
launch/: wall_follower.launch.py
safety_controller/: CMakeLists.txt  package.xml  setup.py
safety_controller/safety_controller/: params.yaml  safety_controller.py  safety_controller_sim.py
wall_follower/: wall_follower.py
wall_follower_sim/tests/: long_left_log.npz  long_right_log.npz  short_left_far_angled_log.npz  short_left_far_log.npz  short_right_angled_log.npz  short_right_close_log.npz
wall_follower_sim/wall_follower/: wall_follower.py  wall_follower_2.py
